# lib/api-spec/openapi.yaml
@@ -552,6 +552,11 @@ paths:
           required: true
           schema:
             type: integer
+        - name: leagueId
+          in: query
+          required: true
+          schema:
+            type: integer
       responses:
         "200":
           description: Squad players
